fix: reduce excessive empty space in gig page reviews section - Reduce margins and padding in Reviews component - Optimize spacing in Gig page layout - Reduce container gaps and section margins - Improve mobile responsiveness with better space utilization

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -11,14 +11,14 @@
   
 
   .orders{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
 
   .messages{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
   .slide{
-    margin: 100px 680px;
+    margin: 100px 0px;
   }
   .slide .container{
     padding: 100px 0px;
@@ -26,27 +26,27 @@
   }
   
   .explore .container{
-    padding: 0px 700px;
+    padding: 0px 0px;
     // background-color: yellow;
 
   }
   .features .container{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
   .featured{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
   .footer{
-    padding: 0px 700px; 
+    padding: 0px 0px; 
   }
   .navbar{
     padding: 0px 700px;
   }
   .projectCard{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
   .slider{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
   .trustedBy{
     padding: 0px 700px;
@@ -70,7 +70,7 @@
 
   
   .gigs .container .cards{
-    padding: 0px 700px;
+    padding: 0px 0px;
   }
 
   .gigs .breadcrumbs{
@@ -100,7 +100,7 @@
     padding: 0px 500px;
   }
   .slide{
-    margin: 100px 480px;
+    margin: 100px 0px;
   }
   .slide .container{
     padding: 100px 0px;
@@ -108,14 +108,14 @@
   }
   
   .explore .container{
-    padding: 0px 500px;
+    padding: 0px 0px;
 
   }
   .features .container{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .featured{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .footer{
     padding: 0px 500px; 
@@ -124,10 +124,10 @@
     padding: 0px 500px;
   }
   .projectCard{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .slider{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .trustedBy{
     padding: 0px 500px;
@@ -150,20 +150,20 @@
   
 
   .gigs .container .cards{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
 
   .gigs .breadcrumbs{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .gigs  h1{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .gigs  .para{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
   .gigs .menu{
-    padding: 0px 500px;
+    padding: 0px 0px;
   }
 
 }
@@ -259,7 +259,7 @@
   }
 
   .slide{
-    margin: 100px 40px;
+    margin: 100px 0px;
   }
   .slide .container{
     padding: 100px 0px;
